build-files/clair3/2.0.0/README.md
# Clair3 container

Main tool: [clair3](https://github.com/HKU-BAL/Clair3)


<details>
<summary>Additional tools installed via micromamba:</summary> 

```
  Name                      Version       Build                 Channel    
─────────────────────────────────────────────────────────────────────────────
  Jinja2                    3.1.6         pypi_0                pypi
  MarkupSafe                3.0.2         pypi_0                pypi
  _openmp_mutex             4.5           20_gnu                conda-forge
  amply                     0.1.6         pyhd8ed1ab_1          conda-forge
  autoconf                  2.72          pl5321hbb4ee43_1      conda-forge
  automake                  1.17          pl5321ha770c72_0      conda-forge
  binutils                  2.45.1        default_h4852527_101  conda-forge
  binutils_impl_linux-64    2.45.1        default_hfdba357_101  conda-forge
  biopython                 1.86          py311h49ec1c0_1       conda-forge
  boost-cpp                 1.85.0        h3c6214e_4            conda-forge
  bzip2                     1.0.8         hda65f42_9            conda-forge
  c-ares                    1.34.6        hb03c661_0            conda-forge
  ca-certificates           2026.2.25     hbd8a1cb_0            conda-forge
  cffi                      2.0.0         py311h03d9500_1       conda-forge
  coin-or-cbc               2.10.12       h4d16d09_5            conda-forge
  coin-or-cgl               0.60.9        hc46dffc_7            conda-forge
  coin-or-clp               1.17.10       hc03379b_4            conda-forge
  coin-or-osi               0.108.11      hf4fecb4_8            conda-forge
  coin-or-utils             2.11.12       hc93afbd_7            conda-forge
  conda-gcc-specs           15.2.0        h53410ce_18           conda-forge
  curl                      8.19.0        hcf29cc6_0            conda-forge
  docutils                  0.22.4        pyhd8ed1ab_0          conda-forge
  filelock                  3.20.0        pypi_0                pypi
  fsspec                    2025.12.0     pypi_0                pypi
  gcc                       15.2.0        h0dff253_18           conda-forge
  gcc_impl_linux-64         15.2.0        he420e7e_18           conda-forge
  gxx                       15.2.0        h834e499_7            conda-forge
  gxx_impl_linux-64         15.2.0        hda75c37_18           conda-forge
  h5py                      3.16.0        pypi_0                pypi
  hdf5plugin                6.0.0         pypi_0                pypi
  htslib                    1.23          h566b1c6_0            bioconda
  icu                       75.1          he02047a_0            conda-forge
  importlib-metadata        8.7.0         pyhe01879c_1          conda-forge
  isa-l                     2.31.1        hb9d3cd8_1            conda-forge
  kernel-headers_linux-64   6.12.0        he073ed8_6            conda-forge
  keyutils                  1.6.3         hb9d3cd8_0            conda-forge
  krb5                      1.22.2        ha1258a1_0            conda-forge
  ld_impl_linux-64          2.45.1        default_hbd61a6d_101  conda-forge
  libblas                   3.11.0        5_h4a7cf45_openblas   conda-forge
  libboost                  1.85.0        h0ccab89_4            conda-forge
  libboost-devel            1.85.0        h00ab1b0_4            conda-forge
  libboost-headers          1.85.0        ha770c72_4            conda-forge
  libcblas                  3.11.0        5_h0358290_openblas   conda-forge
  libcurl                   8.19.0        hcf29cc6_0            conda-forge
  libdeflate                1.22          hb9d3cd8_0            conda-forge
  libedit                   3.1.20250104  pl5321h7949ede_0      conda-forge
  libev                     4.33          hd590300_2            conda-forge
  libexpat                  2.7.4         hecca717_0            conda-forge
  libffi                    3.5.2         h3435931_0            conda-forge
  libgcc                    15.2.0        he0feb66_18           conda-forge
  libgcc-devel_linux-64     15.2.0        hcc6f6b0_118          conda-forge
  libgcc-ng                 15.2.0        h69a702a_18           conda-forge
  libgfortran               15.2.0        h69a702a_18           conda-forge
  libgfortran5              15.2.0        h68bc16d_18           conda-forge
  libgomp                   15.2.0        he0feb66_18           conda-forge
  liblapack                 3.11.0        5_h47877c9_openblas   conda-forge
  liblapacke                3.11.0        5_h6ae95b6_openblas   conda-forge
  liblzma                   5.8.2         hb03c661_0            conda-forge
  liblzma-devel             5.8.2         hb03c661_0            conda-forge
  libnghttp2                1.67.0        had1ee68_0            conda-forge
  libnsl                    2.0.1         hb9d3cd8_1            conda-forge
  libopenblas               0.3.30        pthreads_h94d23a6_4   conda-forge
  libsanitizer              15.2.0        h90f66d4_18           conda-forge
  libsqlite                 3.52.0        h0c1763c_0            conda-forge
  libssh2                   1.11.1        hcf80075_0            conda-forge
  libstdcxx                 15.2.0        h934c35e_18           conda-forge
  libstdcxx-devel_linux-64  15.2.0        hd446a21_118          conda-forge
  libstdcxx-ng              15.2.0        hdf11a46_18           conda-forge
  libuuid                   2.41.3        h5347b49_0            conda-forge
  libxcrypt                 4.4.36        hd590300_1            conda-forge
  libzlib                   1.3.1         hb9d3cd8_2            conda-forge
  lightning-utilities       0.15.3        pypi_0                pypi
  m4                        1.4.21        hb03c661_0            conda-forge
  make                      4.4.1         hb9d3cd8_2            conda-forge
  mpmath                    1.3.0         pypi_0                pypi
  ncurses                   6.5           h2d0b736_3            conda-forge
  networkx                  3.6.1         pyhcf101f3_0          conda-forge
  numexpr                   2.14.1        pypi_0                pypi
  numpy                     2.4.2         py311h2e04523_1       conda-forge
  openssl                   3.6.1         h35e630c_1            conda-forge
  packaging                 26.0          pyhcf101f3_0          conda-forge
  parallel                  20260122      ha770c72_0            conda-forge
  pbzip2                    1.1.13        h1fcc475_2            conda-forge
  perl                      5.32.1        7_hd590300_perl5      conda-forge
  pigz                      2.8           h421ea60_2            conda-forge
  pillow                    12.0.0        pypi_0                pypi
  pip                       26.0.1        pyh8b19718_0          conda-forge
  pulp                      2.8.0         py311h77a8cca_3       conda-forge
  pycparser                 2.22          pyh29332c3_1          conda-forge
  pyfaidx                   0.9.0.3       pyhdfd78af_0          bioconda
  pyparsing                 3.3.2         pyhcf101f3_0          conda-forge
  pysam                     0.23.3        py311hb456a96_1       bioconda
  python                    3.11.15       hd63d673_0_cpython    conda-forge
  python-isal               1.8.0         py311h49ec1c0_1       conda-forge
  python-zlib-ng            1.0.0         py311h15805fc_1       conda-forge
  python_abi                3.11          8_cp311               conda-forge
  pyvcf3                    1.0.4         py311haab0aaa_0       bioconda
  readline                  8.3           h853b02a_0            conda-forge
  samtools                  1.23          h96c455f_0            bioconda
  scipy                     1.17.1        py311hbe70eeb_0       conda-forge
  setuptools                82.0.1        pyh332efcf_0          conda-forge
  six                       1.17.0        pyhe01879c_1          conda-forge
  sympy                     1.14.0        pypi_0                pypi
  sysroot_linux-64          2.39          hc4b9eeb_6            conda-forge
  tk                        8.6.13        noxft_h366c992_103    conda-forge
  torch                     2.10.0+cpu    pypi_0                pypi
  torchmetrics              1.9.0         pypi_0                pypi
  torchvision               0.25.0+cpu    pypi_0                pypi
  tqdm                      4.67.3        pypi_0                pypi
  typing_extensions         4.15.0        pypi_0                pypi
  tzdata                    2025c         hc9c84f9_1            conda-forge
  uv                        0.10.9        pypi_0                pypi
  whatshap                  2.8           py311he264feb_0       bioconda
  wheel                     0.46.3        pyhd8ed1ab_0          conda-forge
  xopen                     2.0.2         pyh707e725_2          conda-forge
  xz                        5.8.2         ha02ee65_0            conda-forge
  xz-gpl-tools              5.8.2         ha02ee65_0            conda-forge
  xz-tools                  5.8.2         hb03c661_0            conda-forge
  zipp                      3.23.0        pyhcf101f3_1          conda-forge
  zlib                      1.3.1         hb9d3cd8_2            conda-forge
  zlib-ng                   2.3.3         hceb46e0_1            conda-forge
  zstandard                 0.25.0        py311haee01d2_1       conda-forge
  zstd                      1.5.7         hb78ec9c_6            conda-forge
```
</details>
</br>

Code repository: https://github.com/HKU-BAL/Clair3

Basic information on how to use this tool:
- executable: run_clair3.sh
- help: `-h`, `--help`
- version: `-v`, `--version`
- description: A germline small variant caller for long-reads.

Additional information:

- This container includes the following models in `/clair3/models` and `/opt/models`
- This container has no GPU support!

List of models:
```
hifi
hifi_revio
hifi_sequel2
ilmn
ont
ont_guppy5
r1041_e82_400bps_hac_v410
r1041_e82_400bps_hac_v500
r1041_e82_400bps_hac_with_mv
r1041_e82_400bps_sup_v410
```

Full documentation: https://github.com/HKU-BAL/Clair3

## Example Usage

```bash
run_clair3.sh \
  --bam_fn=${BAM} \
  --ref_fn=${REF} \
  --threads=${THREADS} \  		     
  --platform="ont" \               ## options: {ont,hifi,ilmn}
  --model_path=${MODEL_PREFIX} \   ## absolute model path prefix
  --output=${OUTPUT_DIR}           ## absolute output path prefix
## pileup output file: ${OUTPUT_DIR}/pileup.vcf.gz
## full-alignment output file: ${OUTPUT_DIR}/full_alignment.vcf.gz
## Clair3 final output file: ${OUTPUT_DIR}/merge_output.vcf.gz
```
